--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",  // This is the missing build script
+    "build": "react-scripts build",  
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
