--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-amplify": "^6.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "^4.0.3"
   },
   "browserslist": {
