--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "aws-amplify": "^6.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
