--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,28 @@
 {
+  "api": {
+    "saver": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "FollowingSunnahSaver"
+        },
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "FollowingSunnahComments"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    }
+  },
   "auth": {
     "followingthesunnah4235cdc8": {
       "customAuth": false,
@@ -25,6 +49,90 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "function": {
+    "FollowingSunnahComments": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributeEnvMap": {
+            "Arn": "TABLE_ARN",
+            "Name": "TABLE_NAME"
+          },
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "storage",
+          "resourceName": "Comments"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "FollowingSunnahSaver": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributeEnvMap": {
+            "Arn": "TABLE_ARN",
+            "Name": "TABLE_NAME"
+          },
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "storage",
+          "resourceName": "EditorContent"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_FollowingSunnahComments_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "FollowingSunnahComments"
+        }
+      ]
+    },
+    "AMPLIFY_function_FollowingSunnahComments_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "FollowingSunnahComments"
+        }
+      ]
+    },
+    "AMPLIFY_function_FollowingSunnahSaver_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "FollowingSunnahSaver"
+        }
+      ]
+    },
+    "AMPLIFY_function_FollowingSunnahSaver_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "FollowingSunnahSaver"
+        }
+      ]
+    }
+  },
+  "storage": {
+    "Comments": {
+      "providerPlugin": "awscloudformation",
+      "service": "DynamoDB"
+    },
+    "EditorContent": {
+      "providerPlugin": "awscloudformation",
+      "service": "DynamoDB"
     }
   }
 }
