--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@aws-amplify/api": "^6.0.54",
+    "@aws-amplify/api-rest": "^4.0.52",
     "@aws-amplify/auth": "^6.5.2",
+    "@aws-amplify/ui-react": "^6.5.4",
     "@emailjs/browser": "^4.4.1",
     "aws-amplify": "^6.6.5",
     "react": "^17.0.2",
