--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-amplify/ui-react": "^6.5.4",
     "@emailjs/browser": "^4.4.1",
     "aws-amplify": "^6.6.5",
+    "aws-sdk": "^2.1691.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.27.0",
