--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -49,6 +49,24 @@
       "service": "Lambda"
     }
   },
+  "parameters": {
+    "AMPLIFY_function_editorFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "editorFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_editorFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "editorFunction"
+        }
+      ]
+    }
+  },
   "storage": {
     "editorcontent": {
       "providerPlugin": "awscloudformation",
