--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emailjs/browser": "^4.4.1",
     "aws-amplify": "^6.6.5",
     "aws-sdk": "^2.1691.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.27.0",
