--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "webpack": "^5.95.0",
