--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^4.4.1",
     "aws-amplify": "^6.6.6",
     "aws-sdk": "^2.1691.0",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
     "react": "^17.0.2",
