--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@aws-amplify/auth": "^6.5.2",
     "@aws-amplify/ui-react": "^6.5.4",
     "@emailjs/browser": "^4.4.1",
+    "@react-google-maps/api": "^2.20.3",
     "aws-amplify": "^6.6.6",
     "aws-sdk": "^2.1691.0",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
