--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "openai": "^4.75.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hcaptcha": "^0.1.1",
     "react-leaflet": "^3.2.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
