--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-google-maps/api": "^2.20.3",
     "aws-amplify": "^6.10.2",
-    "aws-sdk": "^2.1691.0",
+    "aws-sdk": "^2.1692.0",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +25,7 @@
     "openai": "^4.75.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-leaflet": "^3.2.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
