--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-sdk": "^2.1692.0",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.7",
+    "js-levenshtein": "^1.1.6",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "openai": "^4.75.0",
