--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "aws-sdk": "^2.1692.0",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.7",
+    "express-jwt": "^8.5.1",
     "js-levenshtein": "^1.1.6",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "leaflet": "^1.9.4",
+    "oidc-client-ts": "^3.1.0",
     "openai": "^4.75.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^3.1.0",
     "react-leaflet": "^3.2.5",
+    "react-oidc-context": "^3.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
