--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -99,77 +99,7 @@
       "service": "API Gateway"
     }
   },
-  "auth": {
-    "followingthesunnaha2b3202b": {
-      "customAuth": false,
-      "dependsOn": [
-        {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bDefineAuthChallenge",
-          "triggerProvider": "Cognito"
-        },
-        {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bCreateAuthChallenge",
-          "triggerProvider": "Cognito"
-        },
-        {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse",
-          "triggerProvider": "Cognito"
-        }
-      ],
-      "frontendAuthConfig": {
-        "mfaConfiguration": "OPTIONAL",
-        "mfaTypes": [
-          "SMS"
-        ],
-        "passwordProtectionSettings": {
-          "passwordPolicyCharacters": [],
-          "passwordPolicyMinLength": 8
-        },
-        "signupAttributes": [
-          "EMAIL"
-        ],
-        "socialProviders": [],
-        "usernameAttributes": [
-          "EMAIL"
-        ],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
-      },
-      "providerPlugin": "awscloudformation",
-      "service": "Cognito"
-    },
-    "userPoolGroups": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId",
-            "AppClientIDWeb",
-            "AppClientID"
-          ],
-          "category": "auth",
-          "resourceName": "followingthesunnaha2b3202b"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Cognito-UserPool-Groups"
-    }
-  },
+  "auth": {},
   "function": {
     "EmailServiceFunction": {
       "build": true,
@@ -273,6 +203,176 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_EmailServiceFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "EmailServiceFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_EmailServiceFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "EmailServiceFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_MarriageProfilesHandler_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "MarriageProfilesHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_MarriageProfilesHandler_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "MarriageProfilesHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_PollyLambda_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "PollyLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_PollyLambda_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "PollyLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_businessHandler_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "businessHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_businessHandler_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "businessHandler"
+        }
+      ]
+    },
+    "AMPLIFY_function_chatbotFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "chatbotFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_chatbotFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "chatbotFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_createCommentsTableFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createCommentsTableFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_createCommentsTableFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "createCommentsTableFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_editorFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "editorFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_editorFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "editorFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bCreateAuthChallenge_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bCreateAuthChallenge"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bCreateAuthChallenge_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bCreateAuthChallenge"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bDefineAuthChallenge_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bDefineAuthChallenge"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bDefineAuthChallenge_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bDefineAuthChallenge"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_RECAPTCHASECRET": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
+        }
+      ]
+    },
+    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
+        }
+      ]
     }
   },
   "storage": {
