--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -99,7 +99,50 @@
       "service": "API Gateway"
     }
   },
-  "auth": {},
+  "auth": {
+    "followingthesunnahb2af5a8db2af5a8d": {
+      "customAuth": false,
+      "dependsOn": [],
+      "frontendAuthConfig": {
+        "mfaConfiguration": "OPTIONAL",
+        "mfaTypes": [
+          "SMS"
+        ],
+        "passwordProtectionSettings": {
+          "passwordPolicyCharacters": [],
+          "passwordPolicyMinLength": 8
+        },
+        "signupAttributes": [
+          "EMAIL",
+          "NAME"
+        ],
+        "socialProviders": [],
+        "usernameAttributes": [
+          "EMAIL"
+        ],
+        "verificationMechanisms": [
+          "EMAIL"
+        ]
+      },
+      "providerPlugin": "awscloudformation",
+      "service": "Cognito"
+    },
+    "userPoolGroups": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId",
+            "AppClientIDWeb",
+            "AppClientID"
+          ],
+          "category": "auth",
+          "resourceName": "followingthesunnahb2af5a8db2af5a8d"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Cognito-UserPool-Groups"
+    }
+  },
   "function": {
     "EmailServiceFunction": {
       "build": true,
@@ -203,176 +246,6 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_EmailServiceFunction_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "EmailServiceFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_EmailServiceFunction_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "EmailServiceFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_MarriageProfilesHandler_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "MarriageProfilesHandler"
-        }
-      ]
-    },
-    "AMPLIFY_function_MarriageProfilesHandler_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "MarriageProfilesHandler"
-        }
-      ]
-    },
-    "AMPLIFY_function_PollyLambda_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "PollyLambda"
-        }
-      ]
-    },
-    "AMPLIFY_function_PollyLambda_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "PollyLambda"
-        }
-      ]
-    },
-    "AMPLIFY_function_businessHandler_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "businessHandler"
-        }
-      ]
-    },
-    "AMPLIFY_function_businessHandler_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "businessHandler"
-        }
-      ]
-    },
-    "AMPLIFY_function_chatbotFunction_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "chatbotFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_chatbotFunction_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "chatbotFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_createCommentsTableFunction_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "createCommentsTableFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_createCommentsTableFunction_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "createCommentsTableFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_editorFunction_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "editorFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_editorFunction_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "editorFunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bCreateAuthChallenge_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bCreateAuthChallenge"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bCreateAuthChallenge_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bCreateAuthChallenge"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bDefineAuthChallenge_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bDefineAuthChallenge"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bDefineAuthChallenge_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bDefineAuthChallenge"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_RECAPTCHASECRET": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
-        }
-      ]
-    },
-    "AMPLIFY_function_followingthesunnaha2b3202bVerifyAuthChallengeResponse_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "followingthesunnaha2b3202bVerifyAuthChallengeResponse"
-        }
-      ]
     }
   },
   "storage": {
