--- a/amplify/backend/function/businessHandler/src/package.json
+++ b/amplify/backend/function/businessHandler/src/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.19.1",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "jwks-rsa": "^2.0.5",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
